@@ -155,9 +155,9 @@ void File::RaiseFileOverNewConnection(Connection* conn, bool is_orig)
 	if ( conn && FileEventAvailable(file_over_new_connection) )
 		{
 		FileEvent(file_over_new_connection, {
-			val->Ref(),
-			conn->BuildConnVal(),
-			val_mgr->GetBool(is_orig),
+			IntrusivePtr{NewRef{}, val},
+			IntrusivePtr{AdoptRef{}, conn->BuildConnVal()},
+			IntrusivePtr{AdoptRef{}, val_mgr->GetBool(is_orig)},
 		});
 		}
 	}
@@ -299,11 +299,11 @@ bool File::SetMime(const string& mime_type)
 	if ( ! FileEventAvailable(file_sniff) )
 		return false;
 
-	RecordVal* meta = new RecordVal(fa_metadata_type);
+	auto meta = make_intrusive<RecordVal>(fa_metadata_type);
 	meta->Assign(meta_mime_type_idx, make_intrusive<StringVal>(mime_type));
 	meta->Assign(meta_inferred_idx, val_mgr->GetBool(0));
 
-	FileEvent(file_sniff, {val->Ref(), meta});
+	FileEvent(file_sniff, {IntrusivePtr{NewRef{}, val}, std::move(meta)});
 	return true;
 	}
 
@@ -332,7 +332,7 @@ void File::InferMetadata()
 	len = min(len, LookupFieldDefaultCount(bof_buffer_size_idx));
 	file_mgr->DetectMIME(data, len, &matches);
 
-	RecordVal* meta = new RecordVal(fa_metadata_type);
+	auto meta = make_intrusive<RecordVal>(fa_metadata_type);
 
 	if ( ! matches.empty() )
 		{
@@ -342,8 +342,7 @@ void File::InferMetadata()
 		             file_analysis::GenMIMEMatchesVal(matches));
 		}
 
-	FileEvent(file_sniff, {val->Ref(), meta});
-	return;
+	FileEvent(file_sniff, {IntrusivePtr{NewRef{}, val}, std::move(meta)});
 	}
 
 bool File::BufferBOF(const u_char* data, uint64_t len)
@@ -455,9 +454,9 @@ void File::DeliverChunk(const u_char* data, uint64_t len, uint64_t offset)
 			if ( FileEventAvailable(file_reassembly_overflow) )
 				{
 				FileEvent(file_reassembly_overflow, {
-					val->Ref(),
-					val_mgr->GetCount(current_offset),
-					val_mgr->GetCount(gap_bytes),
+					IntrusivePtr{NewRef{}, val},
+					IntrusivePtr{AdoptRef{}, val_mgr->GetCount(current_offset)},
+					IntrusivePtr{AdoptRef{}, val_mgr->GetCount(gap_bytes)}
 				});
 				}
 			}
@@ -600,9 +599,9 @@ void File::Gap(uint64_t offset, uint64_t len)
 	if ( FileEventAvailable(file_gap) )
 		{
 		FileEvent(file_gap, {
-			val->Ref(),
-			val_mgr->GetCount(offset),
-			val_mgr->GetCount(len),
+			IntrusivePtr{NewRef{}, val},
+			IntrusivePtr{AdoptRef{}, val_mgr->GetCount(offset)},
+			IntrusivePtr{AdoptRef{}, val_mgr->GetCount(len)}
 		});
 		}
 
