@@ -59,6 +59,10 @@ Deprecated Functionality
   ``Connection::ConnectionEventFast()`` methods are now deprecated, use
   ``Connection::EnqueueEvent()`` instead.
 
+- The ``file_analysis::File::FileEvent()`` methods taking ``val_list``
+  arguments are now deprecated, use the overload that takes a ``zeek::Args``
+  instead.
+
 Zeek 3.1.0
 ==========
 
